--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "rollup-plugin-babel": "4.0.3",
     "stylelint": "9.7.1",
     "stylelint-config-primer": "2.2.11"
+  },
+  "dependencies": {
+    "mssql": "^4.3.0"
   }
 }
